--- a/app/templates/feedlot/cattle/move.html
+++ b/app/templates/feedlot/cattle/move.html
@@ -3,7 +3,7 @@
 {% block title %}Move Cattle - {{ feedlot.name }}{% endblock %}
 
 {% block nav_items %}
-<a href="{{ url_for('feedlot.view_cattle', feedlot_id=feedlot._id, cattle_id=cattle._id) }}" class="px-4 py-2 hover:bg-blue-500 rounded transition">Back</a>
+<a href="{{ url_for('feedlot.view_cattle', feedlot_id=feedlot._id, cattle_id=cattle._id) }}" class="px-4 py-2 hover:bg-teal rounded transition">Back</a>
 {% endblock %}
 
 {% block content %}
@@ -26,7 +26,7 @@
             <div>
                 <label for="pen_id" class="block text-sm font-medium text-gray-700 mb-2">Pen *</label>
                 <select id="pen_id" name="pen_id"
-                        class="w-full px-4 py-2 border border-gray-300 rounded-lg focus:ring-2 focus:ring-blue-500 focus:border-transparent">
+                        class="w-full px-4 py-2 border border-gray-300 rounded-lg focus:ring-2 focus:ring-teal focus:border-transparent">
                     <option value="">Remove from pen</option>
                     {% for pen in pens %}
                     <option value="{{ pen._id }}">Pen {{ pen.pen_number }} ({{ pen.capacity }} capacity)</option>
