--- a/app/templates/feedlot/pens/view.html
+++ b/app/templates/feedlot/pens/view.html
@@ -3,7 +3,7 @@
 {% block title %}Pen {{ pen.pen_number }} - {{ feedlot.name }}{% endblock %}
 
 {% block nav_items %}
-<a href="{{ url_for('feedlot.list_pens', feedlot_id=feedlot._id) }}" class="px-4 py-2 hover:bg-blue-500 rounded transition">Back to Pens</a>
+<a href="{{ url_for('feedlot.list_pens', feedlot_id=feedlot._id) }}" class="px-4 py-2 hover:bg-teal rounded transition">Back to Pens</a>
 {% endblock %}
 
 {% block content %}
@@ -16,7 +16,7 @@
             {% endif %}
         </div>
         <div class="space-x-2">
-            <a href="{{ url_for('feedlot.edit_pen', feedlot_id=feedlot._id, pen_id=pen._id) }}" class="bg-blue-600 hover:bg-blue-700 text-white font-semibold py-2 px-4 rounded-lg transition duration-200">
+            <a href="{{ url_for('feedlot.edit_pen', feedlot_id=feedlot._id, pen_id=pen._id) }}" class="bg-teal hover:opacity-90 text-white font-semibold py-2 px-4 rounded-lg transition duration-200">
                 Edit
             </a>
         </div>
@@ -33,7 +33,7 @@
             </div>
             <div>
                 <p class="text-sm text-gray-600">Current Count</p>
-                <p class="text-2xl font-bold text-blue-600">{{ pen.current_count }}</p>
+                <p class="text-2xl font-bold text-teal">{{ pen.current_count }}</p>
             </div>
             <div>
                 <p class="text-sm text-gray-600">Available Space</p>
@@ -88,7 +88,7 @@
                     </td>
                     <td class="px-6 py-4 whitespace-nowrap text-sm">
                         <a href="{{ url_for('feedlot.view_cattle', feedlot_id=feedlot._id, cattle_id=c._id) }}" 
-                           class="text-blue-600 hover:text-blue-800">View</a>
+                           class="text-teal hover:opacity-80">View</a>
                     </td>
                 </tr>
                 {% endfor %}
