--- a/app/templates/top_level/dashboard.html
+++ b/app/templates/top_level/dashboard.html
@@ -3,8 +3,8 @@
 {% block title %}Dashboard - HerdLinx SaaS{% endblock %}
 
 {% block nav_items %}
-<a href="{{ url_for('top_level.dashboard') }}" class="px-4 py-2 hover:bg-blue-500 rounded transition">Dashboard</a>
-<a href="{{ url_for('top_level.create_feedlot') }}" class="px-4 py-2 hover:bg-blue-500 rounded transition">Create Feedlot</a>
+<a href="{{ url_for('top_level.dashboard') }}" class="px-4 py-2 hover:bg-teal rounded transition">Dashboard</a>
+<a href="{{ url_for('top_level.create_feedlot') }}" class="px-4 py-2 hover:bg-teal rounded transition">Create Feedlot</a>
 {% endblock %}
 
 {% block home_url %}{{ url_for('top_level.dashboard') }}{% endblock %}
@@ -16,7 +16,7 @@
 </div>
 
 <div class="mb-6">
-    <a href="{{ url_for('top_level.create_feedlot') }}" class="inline-block bg-blue-600 hover:bg-blue-700 text-white font-semibold py-3 px-6 rounded-lg transition duration-200">
+    <a href="{{ url_for('top_level.create_feedlot') }}" class="inline-block bg-teal hover:opacity-90 text-white font-semibold py-3 px-6 rounded-lg transition duration-200">
         + Create New Feedlot
     </a>
 </div>
@@ -29,7 +29,7 @@
         <p class="text-gray-600 mb-4">{{ feedlot.location }}</p>
         
         <div class="flex space-x-2">
-            <a href="{{ url_for('feedlot.dashboard', feedlot_id=feedlot._id) }}" class="flex-1 bg-blue-600 hover:bg-blue-700 text-white text-center font-semibold py-2 px-4 rounded-lg transition duration-200">
+            <a href="{{ url_for('feedlot.dashboard', feedlot_id=feedlot._id) }}" class="flex-1 bg-teal hover:opacity-90 text-white text-center font-semibold py-2 px-4 rounded-lg transition duration-200">
                 Open
             </a>
             <a href="{{ url_for('top_level.view_feedlot', feedlot_id=feedlot._id) }}" class="bg-gray-600 hover:bg-gray-700 text-white font-semibold py-2 px-4 rounded-lg transition duration-200">
