--- a/app/templates/feedlot/batches/view.html
+++ b/app/templates/feedlot/batches/view.html
@@ -17,7 +17,7 @@
         <div class="space-y-3">
             <div>
                 <p class="text-sm text-gray-600">Induction Date</p>
-                <p class="font-semibold">{{ batch.induction_date.strftime('%Y-%m-%d') if batch.induction_date }}</p>
+                <p class="font-semibold">{{ batch.induction_date | strftime }}</p>
             </div>
             <div>
                 <p class="text-sm text-gray-600">Source</p>
