--- a/app/templates/feedlot/dashboard.html
+++ b/app/templates/feedlot/dashboard.html
@@ -75,7 +75,7 @@
                 {% for batch in recent_batches|reverse %}
                 <tr class="hover:bg-gray-50">
                     <td class="px-6 py-4 whitespace-nowrap text-sm font-medium">{{ batch.batch_number }}</td>
-                    <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-600">{{ batch.induction_date.strftime('%Y-%m-%d') if batch.induction_date }}</td>
+                    <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-600">{{ batch.induction_date | strftime }}</td>
                     <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-600">{{ batch.source }}</td>
                     <td class="px-6 py-4 whitespace-nowrap text-sm">
                         <a href="{{ url_for('feedlot.view_batch', feedlot_id=feedlot._id, batch_id=batch._id) }}" 
