--- a/app/templates/top_level/feedlot_users.html
+++ b/app/templates/top_level/feedlot_users.html
@@ -58,7 +58,7 @@
                     {% endif %}
                 </td>
                 <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500">
-                    {{ user.created_at.strftime('%Y-%m-%d') if user.created_at else 'N/A' }}
+                    {{ user.created_at | strftime if user.created_at else 'N/A' }}
                 </td>
                 <td class="px-6 py-4 whitespace-nowrap text-sm font-medium">
                     {% if not user.is_active %}
