--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -71,7 +71,7 @@
     <!-- Footer -->
     <footer class="bg-navy text-white mt-auto py-6">
         <div class="container mx-auto px-4 text-center">
-            <p>&copy; 2024 HerdLinx SaaS. All rights reserved.</p>
+            <p>&copy; 2025 Herdlinx. All rights reserved.</p>
         </div>
     </footer>
 </body>
