--- a/app/templates/feedlot/cattle/list.html
+++ b/app/templates/feedlot/cattle/list.html
@@ -28,13 +28,23 @@
                     </div>
                 </div>
             </div>
-            <a href="{{ url_for('feedlot.create_cattle', feedlot_id=feedlot._id) }}" 
-               class="bg-white bg-opacity-20 hover:bg-opacity-30 backdrop-blur-sm text-white font-semibold py-3 px-6 rounded-xl transition-all duration-200 flex items-center space-x-2">
-                <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 6v6m0 0v6m0-6h6m-6 0H6"/>
-                </svg>
-                <span>Add Cattle</span>
-            </a>
+            {% block actions_dropdown %}
+            <div class="relative inline-block text-left">
+                <button id="actions-dropdown-btn" type="button" class="inline-flex items-center justify-center w-full rounded-md border border-white border-opacity-30 shadow-sm px-4 py-2 bg-white bg-opacity-20 backdrop-blur-sm text-white text-sm font-medium hover:bg-opacity-30 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-white transition duration-200" aria-expanded="false" aria-haspopup="true">
+                    <span>Actions</span>
+                    <svg class="-mr-1 ml-2 h-5 w-5" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
+                        <path fill-rule="evenodd" d="M5.293 7.293a1 1 0 011.414 0L10 10.586l3.293-3.293a1 1 0 111.414 1.414l-4 4a1 1 0 01-1.414 0l-4-4a1 1 0 010-1.414z" clip-rule="evenodd" />
+                    </svg>
+                </button>
+                <div id="actions-dropdown-menu" class="hidden origin-top-right absolute right-0 mt-2 w-56 rounded-md shadow-lg bg-white ring-1 ring-black ring-opacity-5 focus:outline-none z-50" role="menu" aria-orientation="vertical" aria-labelledby="actions-dropdown-btn">
+                    <div class="py-1" role="none">
+                        {% block actions_items %}
+                        <a href="{{ url_for('feedlot.create_cattle', feedlot_id=feedlot._id) }}" role="menuitem">Create Cattle</a>
+                        {% endblock %}
+                    </div>
+                </div>
+            </div>
+            {% endblock %}
         </div>
     </div>
 </div>
